# hegel-cli

./: .gitignore  ADAPTER_PATTERNS.md  CLAIM_REFACTOR.md  CLAUDE.md  CODEX_ADAPTER_GUIDE.md  CODE_MAP.md  COVERAGE_REPORT.md  COVERAGE_REPORT.md.tmp  Cargo.toml  GUARDRAILS.md  HEGEL_CLAUDE.md  LEXICON.md  LOC_REPORT.md  METRICS.md  PLAN.md  README.md  REFACTOR_PLAN.md  REFACTOR_REVISIONS.md  ROADMAP.md  SPEC.md  TESTING.md  build.rs  factorial.py  workflow.dot
.cargo/: config.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.ddd/: README.review.1  README.review.2  SPEC.md
.ddd/refactor/: 2025-11-04_large-files.md  20251105-workflow-graph-grouping.md  20251106-gap_detection_test_coverage.md  20251106-multi_session_token_attribution.md  20251110-test_extraction.md
.ddd/report/: 20251010-tui-dep-review.md
adapters/claude_code/: hooks.json
commands/: hegel.md
crates/hegel-ast-grep/: Cargo.toml  build.rs
crates/hegel-ast-grep/src/: lib.rs
docs/: ADVANCED_TOOLS.md  CUSTOMIZING.md  MD_REVIEW.md  ONBOARDING_STATE_METRICS.md  STATE.md
docs/astq_patterns/: README.md  rust_colored.yaml
docs/integrations/: CLAUDE_CODE.md
guides/: ARCHITECTURE_WRITING.md  CLAUDE_CUSTOMIZATION.md  CODE_MAP_WRITING.md  GIT_INITIALIZATION.md  HANDOFF_WRITING.md  KICKOFF_WRITING.md  KNOWLEDGE_CAPTURE.md  LEARNINGS_WRITING.md  LEXICON.md  NEXT_SESSION_WRITING.md  PLAN_WRITING.md  PROJECT_DETECTION.md  QUESTION_TRACKING.md  README_WRITING.md  SPEC_WRITING.md  STUDY_PLANNING.md  VISION_WRITING.md
guides/partials/: code_map.hbs
guides/templates/: code_map_hierarchical.md  code_map_monolithic.md  mirror_workflow.md
scripts/: README.md  add-serial-to-cwd-tests.sh  analyze-hook-schema.sh  analyze-transcripts.sh  archive-oneoff.pl  build-and-install.sh  build.sh  check-hook-fields.sh  check-transcript-tokens.sh  commits-per-day.py  debug-analyze.sh  debug-meta-mode-bug.sh  debug-phase-count.sh  generate-coverage-report.sh  generate-loc-report.sh  post-build.sh  reproduce-init-workflow-bug.sh  scan-gap-transcripts.pl  summarize-findings.sh  test-stability.sh
scripts/analyze/: analyze-token-attribution.py
scripts/oneoffs/: 2025-10-15-add-serial-to-env-tests.pl  2025-10-15-refactor-theme-colors.pl  2025-10-15-refactor-theme-colors.sh  20251103-fix-archive-duplication.pl  20251110-remove-explicit-done-nodes.sh  README.md
src/: README.md  config.rs  ddd.rs  embedded.rs  lib.rs  main.rs  test_helpers.rs  theme.rs
src/adapters/: README.md  claude_code.rs  codex.rs  cursor.rs  mod.rs
src/analyze/: README.md  backfill.rs  cowboy_gap_filler.rs  gap_detection.rs  mod.rs  repair.rs  sections.rs  totals.rs
src/commands/: README.md  analyze.rs  archive.rs  astq.rs  config.rs  external_bin.rs  fork.rs  git.rs  hook.rs  hooks_setup.rs  ide.rs  init.rs  markdown.rs  meta.rs  mod.rs  new.rs  pm.rs  reflect.rs  review.rs  status.rs  workflow.rs  wrapped.rs
src/doctor/: migrations.rs  mod.rs  rescue.rs
src/engine/: README.md  handlebars.rs  mod.rs  template.rs
src/guardrails/: README.md  mod.rs  parser.rs  types.rs
src/metamodes/: README.md  mod.rs
src/metrics/: README.md  aggregation.rs  cowboy.rs  git.rs  graph.rs  hooks.rs  mod.rs  states.rs  (+1 more)
tests/: cli_integration.rs  review_cli.rs
workflows/: ANALYSIS.md  cowboy.yaml  discovery.yaml  execution.yaml  init-greenfield.yaml  init-retrofit.yaml  minimal.yaml  refactor.yaml  research.yaml
(+112 files in other folders)
