[workspace]
members = [".", "crates/hegel-ast-grep"]
resolver = "2"

[package]
name = "hegel"
version = "0.0.13"
edition = "2021"
authors = ["Eric Adum <eric.adum@gmail.com>"]
description = "Dialectic-Driven Development CLI"
license = "SSPL-1.0"
repository = "https://github.com/dialecticianai/hegel-cli"

[dependencies]
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
regex = "1.10"
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
fs2 = "0.4"
notify = "6.0"
walkdir = "2.5"
semver = "1.0"
git2 = "0.19"
hegel-ast-grep = { path = "crates/hegel-ast-grep" }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
# Bundle ast-grep binary at compile time (for production releases)
bundle-ast-grep = ["hegel-ast-grep/bundle"]
