[package]
name = "hegel-ast-grep"
version = "0.39.6"
edition = "2021"
authors = ["Eric Adum <eric.adum@gmail.com>"]
description = "AST-grep binary bundler for Hegel (vendored ast-grep v0.39.6)"
license = "SSPL-1.0"

[dependencies]
anyhow = "1.0"

[features]
default = []
# Bundle ast-grep binary at compile time (for production releases)
bundle = []
